--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,9 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
     "typescript": "^5.6.3",
-    "vite": "^5.4.14"
+    "vite": "^5.4.14",
+    "tailwindcss": "^3.4.14",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   }
 }
