--- a/client/package.json
+++ b/client/package.json
@@ -26,14 +26,16 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rest-express": "file:..",
+    "sonner": "^2.0.3",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.14",
-    "tailwindcss": "^3.4.14",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.14"
   }
 }
