--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.76.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
+    "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
     "react-day-picker": "^8.10.1",
