--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,28 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.19.1",
@@ -18,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "react": "^18.3.1",
     "react-confetti": "^6.4.0",
@@ -29,8 +51,11 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.1",
     "react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.15.3",
     "rest-express": "file:..",
     "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
