--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
@@ -65,6 +66,7 @@
     "memorystore": "^1.6.7",
     "meshline": "^3.3.1",
     "next-themes": "^0.4.5",
+    "node-fetch": "^2.7.0",
     "ogl": "^1.0.11",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
@@ -103,9 +105,11 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
+    "@types/node-fetch": "^2.6.12",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
